--- a/task1/index.html
+++ b/task1/index.html
@@ -1,132 +1,185 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>task1</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
+
 <body>
-  <h1>阮一峰大师的文章</h1>
-  <ul>
-    <li><a href="http://www.ruanyifeng.com/home.html">BLOG</a></li>
-    <li><a href="http://www.ruanyifeng.com/home.html">BLOG1</a></li>
-    <li><a href="http://www.ruanyifeng.com/home.html">BLOG2</a></li>
-    <li><a href="http://www.ruanyifeng.com/home.html">BLOG3</a></li>
-  </ul>
-  <h2>你的B计划在哪里？</h2>
-  <h2>你的B计划在这里？</h2>
-  <p>
-    作者：阮一峰  日期： 2016年3月15日
-  </p>
-  <p>
-    春节同学聚会，大家聊起近况。
-    甲在实体经济部门工作，企业效益不好，正酝酿减员增效，他忧心忡忡，跳槽都不知道怎么跳，因为全行业都不景气。
-    乙从事互联网工作，行业发展热火朝天，新事物层出不穷，但是他已人到中年，<a href="http://www.ruanyifeng.com/home.html">技术</a>老化，跟不上行业新陈代谢的速度，公司又实行末位淘汰制，他自觉难以与年轻求职者竞争。
-  </p>
-  <img src="../img/img.jpg" alt="凶不凶？" />
-  <p>
-    谈到未来，他们都很有压力，感到不乐观，甚至苦闷。一个现实的问题是，如果现在的工作干不下去了，未来怎么办？
-    我正好思考过这个问题，就问他们，是否听过"B计划"这个词？军事行动至少要准备两套计划：A<a href="http://www.ruanyifeng.com/home.html">计划</a>在正常情况下执行，B<a href="http://www.ruanyifeng.com/home.html">计划</a>是应急计划，在A计划落空时执行。这就好比电话打到一半，突然手机没电了，要是你随身携带第二块电池，就能应急。B计划就是那备用的第二块电池。
-  </p>
-  <img src="../img/img.jpg" alt="凶不凶？" />
-  <ul>
-    <li>列表1</li>
-    <li>列表2</li>
-    <li>列表3</li>
-  </ul>
-  <h2>图片</h2>
-  <ul>
-      <p>好看的希里</p>
-      <img src="../img/img.jpg" alt="凶不凶？" />
-      <p>好看的希里</p>
-      <img src="../img/img.jpg" alt="凶不凶？" />
-      <p>好看的希里</p>
-      <img src="../img/img.jpg" alt="凶不凶？" />
-      <p>好看的希里</p>
-      <img src="../img/img.jpg" alt="凶不凶？" />
-      <p>好看的希里</p>
-      <img src="../img/img.jpg" alt="凶不凶？" />
-      <p>好看的希里</p>
-      <img src="../img/img.jpg" alt="凶不凶？" />
-      <p>好看的希里</p>
-      <img src="../img/img.jpg" alt="凶不凶？" />
-      <p>好看的希里</p>
-      <img src="../img/img.jpg" alt="凶不凶？" />
-      <p>好看的希里</p>
-      <img src="../img/img.jpg" alt="凶不凶？" />
-      <p>好看的希里</p>
-      <img src="../img/img.jpg" alt="凶不凶？" />
-  </ul>
-  <h2>Node 应用的 Systemd 启动</h2>
-  <h2>Systemd 入门教程：实战篇</h2>
-  <p>
-    作者：阮一峰  日期： 2016年3月15日
-  </p>
-  <ul>
-    <li>排名1</li>
-    <li>排名2</li>
-    <li>排名3</li>
-  </ul>
-  <p>表格要加border="1"</p>
-  <table border="1">
-    <tr>
-      <td>表头</td>
-      <td>表头</td>
-      <td>表头</td>
-    </tr>
-    <tr>
-      <td>长一点的表格</td>
-      <td>长一点的表格</td>
-      <td><a href="#">操作</a></td>
-    </tr>
-    <tr>
-      <td>长一点的表格</td>
-      <td>长一点的表格</td>
-      <td><a href="#">操作</a></td>
-    </tr>
-    <tr>
-      <td>长一点的表格</td>
-      <td>长一点的表格</td>
-      <td><a href="#">操作</a></td>
-    </tr>
-    <tr>
-      <td>总计</td>
-      <td colspan="2">1000</td>
-    </tr>
-  </table>
-  <h2>侧栏的标题</h2>
-  <h2>侧栏窗口标题</h2>
-  <p>请输入邮箱地址：<input type="text" name="mail" value="文本输入框"></p>
-  <p>请输入正确的邮箱地址</p>
-  <p>
-    请输入密码：
-    <input type="text" name="name" value="文本输入框">
-    请重复密码：
-    <input type="text" name="name" value="文本输入框">
-  </p>
-  <p>密码为6-16位英文数字</p>
-  <div>
-    <p>
-      性别：
-      <input type="radio" name="name" value="">
-      男
-      <input type="radio" name="name" value="">
-      女 城市：
-      <select class="city" name="city">
-        <option value="1">上海</option>
-        <option value="2">胡志明市</option>
-        <option value="2">巴提雅</option>
-      </select>
-      <input type="checkbox" name="name" value="1">
-      运动
-      <input type="checkbox" name="name" value="2">
-      艺术
-      <input type="checkbox" name="name" value="3">
-      科学 个人描述：
-      <textarea name="textarea" rows="2" cols="30"></textarea>
-      <input type="submit" name="name" value="确认提交">
-      <button type="button" name="button">确认提交</button>
-    </p>
-    <p>版权所有c</p>
+  <header class="header">
+    <img src="http://imgsrc.baidu.com/forum/w%3D580/sign=729db4e1f3d3572c66e29cd4ba136352/1b4c510fd9f9d72a1815f315d52a2834349bbb41.jpg" alt="百度的图" />
+  </header>
+  <div class='ken'>
+    <ul>
+      <li><a href="http://www.ruanyifeng.com/home.html">BLOG</a></li>
+      <li><a href="http://www.ruanyifeng.com/home.html">BLOG1</a></li>
+      <li><a href="http://www.ruanyifeng.com/home.html">BLOG2</a></li>
+      <li><a href="http://www.ruanyifeng.com/home.html">BLOG3</a></li>
+    </ul>
   </div>
+  <div class="article">
+    <h1>阮一峰大师的文章</h1>
+    <h2>你的B计划在哪里？</h2>
+    <h2>你的B计划在这里？</h2>
+    <p>
+      作者：阮一峰 日期： 2016年3月15日
+    </p>
+    <p>
+      春节同学聚会，大家聊起近况。 甲在实体经济部门工作，企业效益不好，正酝酿减员增效，他忧心忡忡，跳槽都不知道怎么跳，因为全行业都不景气。 乙从事互联网工作，行业发展热火朝天，新事物层出不穷，但是他已人到中年，
+      <a href="http://www.ruanyifeng.com/home.html">技术</a>老化，跟不上行业新陈代谢的速度，公司又实行末位淘汰制，他自觉难以与年轻求职者竞争。
+    </p>
+    <img src="../img/img.jpg" alt="凶不凶？" />
+    <p>
+      谈到未来，他们都很有压力，感到不乐观，甚至苦闷。一个现实的问题是，如果现在的工作干不下去了，未来怎么办？ 我正好思考过这个问题，就问他们，是否听过"B计划"这个词？军事行动至少要准备两套计划：A
+      <a href="http://www.ruanyifeng.com/home.html">计划</a>在正常情况下执行，B<a href="http://www.ruanyifeng.com/home.html">计划</a>是应急计划，在A计划落空时执行。这就好比电话打到一半，突然手机没电了，要是你随身携带第二块电池，就能应急。B计划就是那备用的第二块电池。
+    </p>
+  </div>
+  <div class="article">
+    <h2>你的B计划在这里？</h2>
+    <p>
+      作者：阮一峰 日期： 2016年3月15日
+    </p>
+    <p>
+      春节同学聚会，大家聊起近况。 甲在实体经济部门工作，企业效益不好，正酝酿减员增效，他忧心忡忡，跳槽都不知道怎么跳，因为全行业都不景气。 乙从事互联网工作，行业发展热火朝天，新事物层出不穷，但是他已人到中年，
+      <a href="http://www.ruanyifeng.com/home.html">技术</a>老化，跟不上行业新陈代谢的速度，公司又实行末位淘汰制，他自觉难以与年轻求职者竞争。
+    </p>
+    <img src="../img/img.jpg" alt="凶不凶？" />
+    <ul>
+      <li>列表1</li>
+      <li>列表2</li>
+      <li>列表3</li>
+    </ul>
+  </div>
+  <div class="article">
+    <h2>图片</h2>
+    <ul>
+      <div class="box">
+        <p>好看的希里</p>
+        <img src="../img/img.jpg" alt="凶不凶？" />
+      </div>
+      <div class="box">
+        <p>好看的希里</p>
+        <img src="../img/img.jpg" alt="凶不凶？" />
+      </div>
+      <div class="box">
+        <p>好看的希里</p>
+        <img src="../img/img.jpg" alt="凶不凶？" />
+      </div>
+      <div class="box">
+        <p>好看的希里</p>
+        <img src="../img/img.jpg" alt="凶不凶？" />
+      </div>
+      <div class="box">
+        <p>好看的希里</p>
+        <img src="../img/img.jpg" alt="凶不凶？" />
+      </div>
+      <div class="box">
+        <p>好看的希里</p>
+        <img src="../img/img.jpg" alt="凶不凶？" />
+      </div>
+      <div class="box">
+        <p>好看的希里</p>
+        <img src="../img/img.jpg" alt="凶不凶？" />
+      </div>
+      <div class="box">
+        <p>好看的希里</p>
+        <img src="../img/img.jpg" alt="凶不凶？" />
+      </div>
+  </div>
+  </ul>
+  <div class="article">
+    <h2>Node 应用的 Systemd 启动</h2>
+    <h2>Systemd 入门教程：实战篇</h2>
+    <p>
+      作者：阮一峰 日期： 2016年3月15日
+    </p>
+    <ol>
+      <li>排名1</li>
+      <li>排名2</li>
+      <li>排名3</li>
+    </ol>
+    <p>表格要加border="1"</p>
+    <table border="1" cellspacing="0">
+      <tr>
+        <td class="first">表头</td>
+        <td class="first">表头</td>
+        <td class="first">表头</td>
+      </tr>
+      <tr>
+        <td class="second">长一点的表格</td>
+        <td class="second">长一点的表格</td>
+        <td class="second"><a href="#">操作</a></td>
+      </tr>
+      <tr>
+        <td class="second">长一点的表格</td>
+        <td class="second">长一点的表格</td>
+        <td class="second"><a href="#">操作</a></td>
+      </tr>
+      <tr>
+        <td class="second">长一点的表格</td>
+        <td class="second">长一点的表格</td>
+        <td class="second"><a href="#">操作</a></td>
+      </tr>
+      <tr>
+        <td class="second">长一点的表格</td>
+        <td class="second">长一点的表格</td>
+        <td class="second"><a href="#">操作</a></td>
+      </tr>
+      <tr>
+        <td class="third">总计</td>
+        <td class="third" colspan="2">1000</td>
+      </tr>
+    </table>
+  </div>
+  <div class="article">
+    <h2>侧栏的标题</h2>
+    <h2 class="sideTitle">侧栏窗口标题</h2>
+    <div class="mid">
+      <p><span>请输入邮箱地址：</span>
+        <input type="text" name="mail" value="文本输入框">
+      </p>
+      <p>请输入正确的邮箱地址</p>
+      <p>
+        <span>请输入密码：</span>
+        <input type="text" name="name" value="文本输入框">
+      </p>
+      <p>
+        <span>请重复密码：</span>
+        <input type="text" name="name" value="文本输入框">
+      </p>
+      <p>密码为6-16位英文数字</p>
+      <p>
+        性别：
+        <input type="radio" name="name" value=""> 男
+        <input type="radio" name="name" value=""> 女
+      </p>
+      <p>
+        城市：
+        <select class="city" name="city">
+          <option value="1">上海</option>
+          <option value="2">胡志明市</option>
+          <option value="2">巴提雅</option>
+        </select>
+      </p>
+      <p>
+        <span>爱好：</span>
+        <input type="checkbox" name="name" value="1"> 运动
+        <input type="checkbox" name="name" value="2"> 艺术
+        <input type="checkbox" name="name" value="3"> 科学
+      </p>
+      <p>
+        个人描述：
+        <textarea name="textarea" rows="2" cols="30"></textarea>
+      </p>
+    </div>
+    <input type="submit" name="name" value="确认提交">
+    <button type="button" name="button">确认提交</button>
+  </div>
+  <footer class="footer">
+    <p>版权所有c</p>
+  </footer>
 </body>
+
 </html>
